; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/enic/extr_enic_dev.c_enic_dev_enable2.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/enic/extr_enic_dev.c_enic_dev_enable2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.enic = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @enic_dev_enable2(%struct.enic* %0, i32 %1) #0 {
  %3 = alloca %struct.enic*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.enic* %0, %struct.enic** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.enic*, %struct.enic** %3, align 8
  %7 = getelementptr inbounds %struct.enic, %struct.enic* %6, i32 0, i32 0
  %8 = call i32 @spin_lock(i32* %7)
  %9 = load %struct.enic*, %struct.enic** %3, align 8
  %10 = getelementptr inbounds %struct.enic, %struct.enic* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @vnic_dev_enable2(i32 %11, i32 %12)
  store i32 %13, i32* %5, align 4
  %14 = load %struct.enic*, %struct.enic** %3, align 8
  %15 = getelementptr inbounds %struct.enic, %struct.enic* %14, i32 0, i32 0
  %16 = call i32 @spin_unlock(i32* %15)
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @vnic_dev_enable2(i32, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
